# tailors

./: .gitignore  Pipfile  README.md  env.sample  pyproject.toml
tailors/: commands.py  compressor.py  remover.py  schemas.py  settings.py
